--- a/Web/css/librebooking.css
+++ b/Web/css/librebooking.css
@@ -648,3 +648,53 @@ input.mid-number {
     list-style: none;
     font-size: 10pt;
 }
+
+.flatpickr-calendar {
+    margin: 0 auto;
+}
+
+.flatpickr-months .flatpickr-month {
+    background: var(--primary) !important;
+    color: var(--text-color-btn) !important;
+}
+
+.flatpickr-weekdays {
+    background: var(--primary) !important;
+}
+
+span.flatpickr-weekday {
+    background: var(--primary) !important;
+    color: var(--text-color-btn) !important;
+}
+
+.flatpickr-day.selected,
+.flatpickr-day.startRange,
+.flatpickr-day.endRange,
+.flatpickr-day.selected.inRange,
+.flatpickr-day.startRange.inRange,
+.flatpickr-day.endRange.inRange,
+.flatpickr-day.selected:focus,
+.flatpickr-day.startRange:focus,
+.flatpickr-day.endRange:focus,
+.flatpickr-day.selected:hover,
+.flatpickr-day.startRange:hover,
+.flatpickr-day.endRange:hover,
+.flatpickr-day.selected.prevMonthDay,
+.flatpickr-day.startRange.prevMonthDay,
+.flatpickr-day.endRange.prevMonthDay,
+.flatpickr-day.selected.nextMonthDay,
+.flatpickr-day.startRange.nextMonthDay,
+.flatpickr-day.endRange.nextMonthDay {
+    background: var(--primary) !important;
+    color: var(--text-color-btn) !important;
+    border-color: var(--primary) !important;
+}
+
+.flatpickr-day.today {
+    border-color: var(--primary) !important;
+}
+
+.flatpickr-months .flatpickr-prev-month,
+.flatpickr-months .flatpickr-next-month {
+    fill: var(--text-color-btn) !important;
+}
